--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <script src="testVM.sh"></script> <!--link vm script to html-->
+    <script src="testVM.sh"></script> 
 
 </head>
 <body>
     <header>
         <h1> Welcome to my website </h1>
     </header>
-    <!-- below is the code from the video -->
+    
     <form action="./upload" method="POST" enctype="multipart/form-data">
         <div class="file-field input-field">
           <div class="btn grey">
